--- a/index.html
+++ b/index.html
@@ -74,7 +74,34 @@
       <img src="/app-Evangebla/splash.png" alt="Splash Evangelismo" class="splash-img" />
       <h2>Bienvenido a EVANG_EBLA</h2>
     </section>
-    <!-- Otras secciones aquí... -->
+    <section id="registro" class="section">
+      <h2>Registro de Contacto</h2>
+      <!-- formulario de contacto aquí -->
+    </section>
+    <section id="historial" class="section">
+      <h2>Historial de Contactos</h2>
+      <!-- tabla de historial aquí -->
+    </section>
+    <section id="seguimiento" class="section">
+      <h2>Seguimiento</h2>
+      <!-- seguimiento aquí -->
+    </section>
+    <section id="reportes" class="section">
+      <h2>Reportes</h2>
+      <!-- reportes aquí -->
+    </section>
+    <section id="grupos" class="section">
+      <h2>Grupos y Discipulados</h2>
+      <!-- grupos aquí -->
+    </section>
+    <section id="bautismo" class="section">
+      <h2>Calendario de Bautismo</h2>
+      <!-- bautismo aquí -->
+    </section>
+    <section id="calendario" class="section">
+      <h2>Calendario de Evangelismo</h2>
+      <!-- calendario aquí -->
+    </section>
   </main>
 
   <script>
