--- a/index.html
+++ b/index.html
@@ -66,6 +66,128 @@
     </button>
     <button data-section="calendario" class="btn-nav">
       <span class="material-icons">calendar_month</span><span>Calendario</span>
+   
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="theme-color" content="#0052CC">
+  <link rel="manifest" href="/app-Evangebla/manifest.json">
+  <link rel="apple-touch-icon" href="/app-Evangebla/icon.png">
+  <!-- Google Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Chart.js y librerías -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <title>EVANG_EBLA</title>
+  <style>
+    /* Reset y tipografía */
+    * { box-sizing: border-box; }
+    body { margin: 0; font-family: Arial, sans-serif; }
+
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0; left: 0;
+      width: 200px; height: 100vh;
+      background: #0052cc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 1rem;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+    .sidebar img {
+      width: 60px; height: 60px;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+    }
+    .btn-nav {
+      width: 100%; background: #0052cc; color: #fff;
+      border: none; text-align: left;
+      padding: 0.75rem 1rem; cursor: pointer;
+      font-size: 0.95rem; transition: background 0.2s;
+      display: flex; align-items: center;
+    }
+    .btn-nav .material-icons {
+      font-size: 1.2em; margin-right: 8px;
+    }
+    .btn-nav:hover, .btn-nav.active {
+      background: #003d99;
+    }
+
+    /* Content */
+    .content {
+      margin-left: 200px;
+      padding: 1rem;
+    }
+    .section {
+      display: none;
+    }
+    .section.active {
+      display: block;
+    }
+
+    /* Splash image */
+    .splash-img {
+      width: 100%; max-width: 400px;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 100%; height: auto;
+        flex-direction: row;
+        overflow-x: auto;
+        padding: 0.5rem;
+        white-space: nowrap;
+      }
+      .sidebar img { display: none; }
+      .btn-nav {
+        flex: none; display: inline-flex;
+        justify-content: center;
+        padding: 0.5rem;
+        font-size: 0.9rem;
+      }
+      .content {
+        margin-left: 0;
+        padding-top: calc(0.5rem + 2.5rem);
+      }
+    }
+  </style>
+</head>
+<body>
+  <aside class="sidebar">
+    <img src="/app-Evangebla/icon.png" alt="Icono EVANG_EBLA" />
+    <button data-section="splash" class="btn-nav active">
+      <span class="material-icons">home</span><span>Inicio</span>
+    </button>
+    <button data-section="registro" class="btn-nav">
+      <span class="material-icons">person_add</span><span>Registro</span>
+    </button>
+    <button data-section="historial" class="btn-nav">
+      <span class="material-icons">history</span><span>Historial</span>
+    </button>
+    <button data-section="seguimiento" class="btn-nav">
+      <span class="material-icons">track_changes</span><span>Seguimiento</span>
+    </button>
+    <button data-section="reportes" class="btn-nav">
+      <span class="material-icons">description</span><span>Reportes</span>
+    </button>
+    <button data-section="grupos" class="btn-nav">
+      <span class="material-icons">group</span><span>Grupos</span>
+    </button>
+    <button data-section="bautismo" class="btn-nav">
+      <span class="material-icons">water_drop</span><span>Bautismo</span>
+    </button>
+    <button data-section="calendario" class="btn-nav">
+      <span class="material-icons">calendar_month</span><span>Calendario</span>
     </button>
   </aside>
 
@@ -76,44 +198,46 @@
     </section>
     <section id="registro" class="section">
       <h2>Registro de Contacto</h2>
-      <!-- formulario de contacto aquí -->
+      <!-- Formulario de contacto -->
     </section>
     <section id="historial" class="section">
       <h2>Historial de Contactos</h2>
-      <!-- tabla de historial aquí -->
+      <!-- Tabla de historial -->
     </section>
     <section id="seguimiento" class="section">
       <h2>Seguimiento</h2>
-      <!-- seguimiento aquí -->
+      <!-- Seguimiento -->
     </section>
     <section id="reportes" class="section">
       <h2>Reportes</h2>
-      <!-- reportes aquí -->
+      <!-- Reportes -->
     </section>
     <section id="grupos" class="section">
       <h2>Grupos y Discipulados</h2>
-      <!-- grupos aquí -->
+      <!-- Grupos -->
     </section>
     <section id="bautismo" class="section">
       <h2>Calendario de Bautismo</h2>
-      <!-- bautismo aquí -->
+      <!-- Bautismo -->
     </section>
     <section id="calendario" class="section">
       <h2>Calendario de Evangelismo</h2>
-      <!-- calendario aquí -->
+      <!-- Calendario -->
     </section>
   </main>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', () => {
       const buttons = document.querySelectorAll('.btn-nav');
       const sections = document.querySelectorAll('.section');
       buttons.forEach(btn => {
         btn.addEventListener('click', () => {
           buttons.forEach(b => b.classList.remove('active'));
           btn.classList.add('active');
-          const secId = btn.dataset.section;
-          sections.forEach(sec => sec.classList.toggle('active', sec.id === secId));
+          const target = btn.getAttribute('data-section');
+          sections.forEach(sec => {
+            sec.classList.toggle('active', sec.id === target);
+          });
         });
       });
     });
