--- a/index.html
+++ b/index.html
@@ -14,28 +14,36 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <title>EVANG_EBLA</title>
   <style>
+    * { box-sizing: border-box; }
     body { margin: 0; font-family: Arial, sans-serif; }
-    .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc;
-               display: flex; flex-direction: column; align-items: center; padding-top: 1rem;
-               box-shadow: 2px 0 5px rgba(0,0,0,0.1); z-index: 1000; }
+    .sidebar {
+      position: fixed; top: 0; left: 0;
+      width: 200px; height: 100vh;
+      background: #0052cc;
+      display: flex; flex-direction: column; align-items: center;
+      padding-top: 1rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
     .sidebar img { width: 60px; height: 60px; margin-bottom: 1rem; border-radius: 8px; }
-    .btn-nav { width: 100%; background: #0052cc; color: #fff; border: none;
-               text-align: left; padding: 0.75rem 1rem; cursor: pointer;
-               font-size: 0.95rem; transition: background 0.2s;
-               display: flex; align-items: center; }
+    .btn-nav {
+      width: 100%; background: #0052cc; color: #fff; border: none;
+      text-align: left; padding: 0.75rem 1rem; cursor: pointer;
+      font-size: 0.95rem; display: flex; align-items: center;
+      transition: background 0.2s;
+    }
     .btn-nav .material-icons { font-size: 1.2em; margin-right: 8px; }
     .btn-nav:hover, .btn-nav.active { background: #003d99; }
     .content { margin-left: 200px; padding: 1rem; }
     .section { display: none; }
     .section.active { display: block; }
-    .splash-img { width: 100%; max-width: 400px; border-radius: 8px;
-                  margin-bottom: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.15); }
+    form input, form select, form textarea { width: 100%; padding: 0.5rem; margin-bottom: 0.75rem; border: 1px solid #ccc; border-radius: 4px; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 1rem; }
+    th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
+    .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; }
     @media (max-width: 768px) {
-      .sidebar { width: 100%; height: auto; flex-direction: row;
-                 overflow-x: auto; padding: 0.5rem 0; white-space: nowrap; }
+      .sidebar { width: 100%; height: auto; flex-direction: row; overflow-x: auto; padding: 0.5rem; white-space: nowrap; }
       .sidebar img { display: none; }
-      .btn-nav { flex: none; display: inline-flex;
-                 justify-content: center; padding: 0.5rem; font-size: 0.9rem; }
+      .btn-nav { width: auto; padding: 0.5rem; font-size: 0.9rem; justify-content: center; }
       .content { margin-left: 0; padding-top: calc(0.5rem + 2.5rem); }
     }
   </style>
@@ -43,203 +51,123 @@
 <body>
   <aside class="sidebar">
     <img src="/app-Evangebla/icon.png" alt="Icono EVANG_EBLA" />
-    <button data-section="splash" class="btn-nav active">
-      <span class="material-icons">home</span><span>Inicio</span>
-    </button>
-    <button data-section="registro" class="btn-nav">
-      <span class="material-icons">person_add</span><span>Registro</span>
-    </button>
-    <button data-section="historial" class="btn-nav">
-      <span class="material-icons">history</span><span>Historial</span>
-    </button>
-    <button data-section="seguimiento" class="btn-nav">
-      <span class="material-icons">track_changes</span><span>Seguimiento</span>
-    </button>
-    <button data-section="reportes" class="btn-nav">
-      <span class="material-icons">description</span><span>Reportes</span>
-    </button>
-    <button data-section="grupos" class="btn-nav">
-      <span class="material-icons">group</span><span>Grupos</span>
-    </button>
-    <button data-section="bautismo" class="btn-nav">
-      <span class="material-icons">water_drop</span><span>Bautismo</span>
-    </button>
-    <button data-section="calendario" class="btn-nav">
-      <span class="material-icons">calendar_month</span><span>Calendario</span>
-   
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta name="theme-color" content="#0052CC">
-  <link rel="manifest" href="/app-Evangebla/manifest.json">
-  <link rel="apple-touch-icon" href="/app-Evangebla/icon.png">
-  <!-- Google Material Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Chart.js y librerías -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <title>EVANG_EBLA</title>
-  <style>
-    /* Reset y tipografía */
-    * { box-sizing: border-box; }
-    body { margin: 0; font-family: Arial, sans-serif; }
-
-    /* Sidebar */
-    .sidebar {
-      position: fixed;
-      top: 0; left: 0;
-      width: 200px; height: 100vh;
-      background: #0052cc;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 1rem;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      z-index: 1000;
-    }
-    .sidebar img {
-      width: 60px; height: 60px;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
-    .btn-nav {
-      width: 100%; background: #0052cc; color: #fff;
-      border: none; text-align: left;
-      padding: 0.75rem 1rem; cursor: pointer;
-      font-size: 0.95rem; transition: background 0.2s;
-      display: flex; align-items: center;
-    }
-    .btn-nav .material-icons {
-      font-size: 1.2em; margin-right: 8px;
-    }
-    .btn-nav:hover, .btn-nav.active {
-      background: #003d99;
-    }
-
-    /* Content */
-    .content {
-      margin-left: 200px;
-      padding: 1rem;
-    }
-    .section {
-      display: none;
-    }
-    .section.active {
-      display: block;
-    }
-
-    /* Splash image */
-    .splash-img {
-      width: 100%; max-width: 400px;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .sidebar {
-        width: 100%; height: auto;
-        flex-direction: row;
-        overflow-x: auto;
-        padding: 0.5rem;
-        white-space: nowrap;
-      }
-      .sidebar img { display: none; }
-      .btn-nav {
-        flex: none; display: inline-flex;
-        justify-content: center;
-        padding: 0.5rem;
-        font-size: 0.9rem;
-      }
-      .content {
-        margin-left: 0;
-        padding-top: calc(0.5rem + 2.5rem);
-      }
-    }
-  </style>
-</head>
-<body>
-  <aside class="sidebar">
-    <img src="/app-Evangebla/icon.png" alt="Icono EVANG_EBLA" />
-    <button data-section="splash" class="btn-nav active">
-      <span class="material-icons">home</span><span>Inicio</span>
-    </button>
-    <button data-section="registro" class="btn-nav">
-      <span class="material-icons">person_add</span><span>Registro</span>
-    </button>
-    <button data-section="historial" class="btn-nav">
-      <span class="material-icons">history</span><span>Historial</span>
-    </button>
-    <button data-section="seguimiento" class="btn-nav">
-      <span class="material-icons">track_changes</span><span>Seguimiento</span>
-    </button>
-    <button data-section="reportes" class="btn-nav">
-      <span class="material-icons">description</span><span>Reportes</span>
-    </button>
-    <button data-section="grupos" class="btn-nav">
-      <span class="material-icons">group</span><span>Grupos</span>
-    </button>
-    <button data-section="bautismo" class="btn-nav">
-      <span class="material-icons">water_drop</span><span>Bautismo</span>
-    </button>
-    <button data-section="calendario" class="btn-nav">
-      <span class="material-icons">calendar_month</span><span>Calendario</span>
-    </button>
+    <button data-section="splash" class="btn-nav active"><span class="material-icons">home</span>Inicio</button>
+    <button data-section="registro" class="btn-nav"><span class="material-icons">person_add</span>Registro</button>
+    <button data-section="historial" class="btn-nav"><span class="material-icons">history</span>Historial</button>
+    <button data-section="seguimiento" class="btn-nav"><span class="material-icons">track_changes</span>Seguimiento</button>
+    <button data-section="reportes" class="btn-nav"><span class="material-icons">description</span>Reportes</button>
+    <button data-section="grupos" class="btn-nav"><span class="material-icons">group</span>Grupos</button>
+    <button data-section="bautismo" class="btn-nav"><span class="material-icons">water_drop</span>Bautismo</button>
+    <button data-section="calendario" class="btn-nav"><span class="material-icons">calendar_month</span>Calendario</button>
   </aside>
 
   <main class="content">
     <section id="splash" class="section active">
-      <img src="/app-Evangebla/splash.png" alt="Splash Evangelismo" class="splash-img" />
+      <img src="/app-Evangebla/splash.png" alt="Splash Evangelismo" style="width:100%;max-width:400px;border-radius:8px;margin-bottom:1rem;" />
       <h2>Bienvenido a EVANG_EBLA</h2>
     </section>
+
     <section id="registro" class="section">
       <h2>Registro de Contacto</h2>
-      <!-- Formulario de contacto -->
+      <form id="form-contacto">
+        <input type="text" name="nombre" placeholder="Nombre" required />
+        <input type="number" name="edad" placeholder="Edad" required />
+        <input type="tel" name="telefono" placeholder="Teléfono" required />
+        <select name="genero" required><option value="">Género</option><option>Masculino</option><option>Femenino</option></select>
+        <input type="text" name="ubicacion" placeholder="Ubicación" />
+        <label><input type="checkbox" name="aceptoCristo" /> Aceptó a Cristo</label>
+        <label><input type="checkbox" name="bautizado" /> Bautizado</label>
+        <label><input type="checkbox" name="discipulado" /> Desea discipulado</label>
+        <button type="submit" class="btn-nav"><span class="material-icons">save</span>Guardar</button>
+      </form>
     </section>
+
     <section id="historial" class="section">
       <h2>Historial de Contactos</h2>
-      <!-- Tabla de historial -->
+      <select id="filtro-estado"><option value="all">Todos</option><option value="aceptoCristo">Aceptó a Cristo</option><option value="bautizado">Bautizado</option><option value="discipulado">Discipulado</option></select>
+      <table><thead><tr><th>Nombre</th><th>Edad</th><th>Teléfono</th><th>Género</th><th>Ubicación</th><th>Acciones</th></tr></thead><tbody id="lista-contactos"></tbody></table>
+      <button id="export-contactos" class="btn-nav"><span class="material-icons">file_download</span>Exportar a Excel</button>
     </section>
+
     <section id="seguimiento" class="section">
       <h2>Seguimiento</h2>
-      <!-- Seguimiento -->
+      <form id="form-seguimiento">
+        <select id="contacto-seg" required><option value="">Selecciona contacto</option></select>
+        <input type="date" id="fecha-seg" required />
+        <select id="tipo-seg" required><option>Visita</option><option>Llamada</option><option>Mensaje</option></select>
+        <fieldset><legend>Temas de discipulado</legend>
+          <label><input type="checkbox" class="check-tema" value="Oración" /> Oración</label>
+          <label><input type="checkbox" class="check-tema" value="Biblia" /> Biblia</label>
+          <label><input type="checkbox" class="check-tema" value="Fe" /> Fe</label>
+        </fieldset>
+        <button type="submit" class="btn-nav"><span class="material-icons">save</span>Registrar</button>
+      </form>
+      <ul id="lista-seguimiento"></ul>
+      <button id="export-interacciones" class="btn-nav"><span class="material-icons">file_download</span>Exportar a Excel</button>
     </section>
-    <section id="reportes" class="section">
-      <h2>Reportes</h2>
-      <!-- Reportes -->
-    </section>
+
     <section id="grupos" class="section">
       <h2>Grupos y Discipulados</h2>
-      <!-- Grupos -->
+      <form id="form-grupo">
+        <input type="text" id="nombre-grupo" placeholder="Nombre de grupo" required />
+        <select id="miembros-grupo" multiple></select>
+        <button type="submit" class="btn-nav"><span class="material-icons">save</span>Crear Grupo</button>
+      </form>
+      <ul id="lista-grupos"></ul>
+      <button id="export-grupos" class="btn-nav"><span class="material-icons">file_download</span>Exportar a Excel</button>
     </section>
+
     <section id="bautismo" class="section">
       <h2>Calendario de Bautismo</h2>
-      <!-- Bautismo -->
+      <form id="form-bautismo">
+        <input type="text" id="bautizo-nombre" placeholder="Nombre de la persona" required />
+        <input type="date" id="bautizo-fecha" required />
+        <button type="submit" class="btn-nav"><span class="material-icons">save</span>Agregar Bautismo</button>
+      </form>
+      <ul id="lista-bautismos"></ul>
     </section>
+
     <section id="calendario" class="section">
       <h2>Calendario de Evangelismo</h2>
-      <!-- Calendario -->
+      <form id="form-evento">
+        <input type="text" id="nombre-evento" placeholder="Nombre del evento" required />
+        <select id="tipo-evento" required><option>Templo</option><option>Callejero</option></select>
+        <input type="date" id="fecha-evento" required />
+        <textarea id="detalles-evento" placeholder="Detalles"></textarea>
+        <button type="submit" class="btn-nav"><span class="material-icons">save</span>Programar Evento</button>
+      </form>
+      <ul id="lista-eventos"></ul>
+      <button id="export-eventos" class="btn-nav"><span class="material-icons">file_download</span>Exportar a Excel</button>
+    </section>
+
+    <section id="reportes" class="section">
+      <h2>Reportes y Estadísticas</h2>
+      <label for="mes-select">Mes:</label><input type="month" id="mes-select" />
+      <div class="chart-container"><canvas id="chart-estadisticas"></canvas></div>
+      <button id="export-pdf" class="btn-nav"><span class="material-icons">picture_as_pdf</span>Exportar a PDF</button>
+      <button id="add-report" class="btn-nav" onclick="toggleReportForm()"><span class="material-icons">add_circle</span>Reporte</button>
+      <div id="form-reporte" style="display:none; margin-top:1rem;">
+        <select id="reporte-contacto"><option value="">Selecciona Miembro</option></select>
+        <textarea id="reporte-texto" placeholder="Describe la comunicación"></textarea>
+        <button id="save-reporte" class="btn-nav"><span class="material-icons">save</span>Guardar Reporte</button>
+      </div>
+      <ul id="lista-reportes"></ul>
     </section>
   </main>
 
+  <script src="/app-Evangebla/app.js"></script>
+  <script>if('serviceWorker'in navigator)navigator.serviceWorker.register('/app-Evangebla/service-worker.js');</script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const buttons = document.querySelectorAll('.btn-nav');
-      const sections = document.querySelectorAll('.section');
-      buttons.forEach(btn => {
-        btn.addEventListener('click', () => {
-          buttons.forEach(b => b.classList.remove('active'));
-          btn.classList.add('active');
-          const target = btn.getAttribute('data-section');
-          sections.forEach(sec => {
-            sec.classList.toggle('active', sec.id === target);
-          });
-        });
-      });
+    function toggleReportForm(){ const f=document.getElementById('form-reporte'); f.style.display=f.style.display==='block'?'none':'block'; }
+  </script>
+  <script>
+    document.addEventListener('DOMContentLoaded',()=>{
+      document.querySelectorAll('.btn-nav').forEach(btn=>btn.addEventListener('click',()=>{
+        document.querySelectorAll('.btn-nav').forEach(b=>b.classList.remove('active'));
+        btn.classList.add('active');
+        const target=btn.dataset.section;
+        document.querySelectorAll('.section').forEach(sec=>sec.classList.toggle('active',sec.id===target));
+      }));
     });
   </script>
 </body>
