--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
     window.contactos = [];
 
     // Navegación entre secciones
-    document.querySelectorAll('.btn-nav[data-section]').forEach(btn => {
-      btn.addEventListener('click', () => {
-        document.querySelectorAll('.btn-nav').forEach(b => b.classList.remove('active'));
+    document.querySelectorAll('aside .btn-nav[data-section]').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.preventDefault();
+        document.querySelectorAll('aside .btn-nav').forEach(b => b.classList.remove('active'));
         btn.classList.add('active');
         const sec = btn.getAttribute('data-section');
         document.querySelectorAll('.section').forEach(s => s.classList.toggle('active', s.id === sec));
         if(sec === 'reportes') toggleReportForm();
       });
+    });
     });
 
     // Al registrar contacto, añadir a contactos
@@ -112,6 +114,10 @@
 
     // Toggle y carga de reporte
     function toggleReportForm() {
+      if(window.contactos.length === 0) {
+        alert('No hay contactos registrados. Por favor, registra primero un contacto.');
+        return;
+      }
       const form = document.getElementById('form-reporte');
       form.style.display = form.style.display === 'block' ? 'none' : 'block';
       if(form.style.display === 'block') {
